Adicionada dependência flyway e script de criação do banco de dados

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.3.1</version>
+			<version>42.3.3</version>
 		</dependency>
 
 		<dependency>
@@ -61,6 +61,13 @@
 			<version>5.3.15</version>
 		</dependency>
 
+		<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+    <version>8.5.0</version>
+</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -68,6 +75,18 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>6.5.5</version>
+				<configuration> 
+					<url>jdbc:postgresql://localhost:5432/stocks_db</url> 
+					<user>postgres</user> 
+					<password>postgres</password>
+					<locations>db/migration</locations> 
+					<baselineOnMigrate>true</baselineOnMigrate>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
